Co tenant ,passport and elctricity verification compleated
