# models/Relation.js
@@ -1,0 +1,19 @@
+const mongoose = require("mongoose");
+const bcrypt   = require("bcrypt");
+mongoose.set('runValidators', true);
+
+const ModelSchema = new mongoose.Schema(
+    {
+        name:{
+            type: String,
+            require:true
+        },
+    },
+    {
+        timestamps : true,
+        collection: 'relations'
+    }
+);
+
+module.exports = mongoose.model('Relation',ModelSchema);
+
